Release notes for xmlBlaster (http://www.xmlBlaster.org)
The "#99999" numbers are Subversion revision numbers.

Current svn
===========

 o #14995 DbWatcher changes
   - Removed changeDetector.postUpdateStatement
   - Added converter.postStatement
   - Added changeDetector.ignoreExistingDataOnStartup

 o #14987,#14988 Refactored security framework - incompatible security interface change
   of interfaces I_Subject, I_Session, I_MsgSecurityInterceptor
   - isAuthorized is now a method of the I_Session instead of the I_Subject
   - isAuthorized gets now extended informations to be able to authorize on data instance level
   - importMessage() and exportMessage() have now extended arguments

 o #14985 Upgraded to jaxen-1.1-beta-8.jar from http://jaxen.org (2006-04-01)
   Removed in xmlBlaster/lib/xpath: saxpath.jar jaxen-core.jar jaxen-dom.jar
   Added   xmlBlaster/lib/jaxen.jar

 o #14981 Extended MIME XPath filter:
   - Depending on the configuration the XPath can now query the QoS OR the message content
     The default is as before the message content
   - Optionally you can supply a XSL file name which is used to transform the message content
   - The plugin type name is now dynamically determined to support multiple plugins
   http://www.xmlblaster.org/xmlBlaster/doc/requirements/mime.plugin.access.xpath.html

 o #14976 FileLocator handle now http:// and ftp:// and file: schemas
   to lookup configuration files
   http://www.xmlblaster.org/xmlBlaster/doc/requirements/util.property.html

 o #14974 Extended XPath filter FilePoller: Changed copyOnMove=true as default setting

 o #14974 FilePoller: Changed copyOnMove=true as default setting

 o #14973 FilePoller: Fix for case insensitive OS, Fix for failing renameTo

 o #14970 Added support for all JMX commands for our http/HTML native access, see requirement
   http://www.xmlblaster.org/xmlBlaster/doc/requirements/admin.http.html
